<resources>
    <string name="app_name">POP</string>
    <string name="imageLogo">Logo</string>
    <string name="registrationLogin">Already have an account? Login</string>
    <string name="inputHintName">Name</string>
    <string name="inputHintSurname">Surname</string>
    <string name="inputHintUsername">Username</string>
    <string name="inputHintEmail">Email address</string>
    <string name="inputHintPassword">Password</string>
    <string name="inputHintDescription">Description</string>
    <string name="inputHintConfirmPassword">Confirm Password</string>
    <string name="inputCaptcha">CAPTCHA</string>
    <string name="buttonNext">Next</string>
    <string name="buttonRegister">Registration</string>
    <string name="buttonCompleteRegistration">Finish</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonSave">Save</string>
    <string name="buttonEdit">Edit</string>
    <string name="buttonDelete">Delete</string>
    <string name="registrationInfo">A professor has to confirm your registration. After your account is confirmed, you will gain access to the rest of the application.</string>
    <string name="loginForgottenPassword">Forgotten password?</string>
    <string name="loginCreateAccount">or</string>
    <string name="toastLoginSuccess">Login successful</string>
    <string name="toastRegistrationSuccess">Registration successful</string>
    <string name="toastEmptyName">Name field cannot be empty</string>
    <string name="toastEmptySurname">Surname field cannot be empty</string>
    <string name="toastEmptyPassword">Password field cannot be empty</string>
    <string name="toastEmptyEmail">Email field cannot be empty</string>
    <string name="toastEmptyUsername">Username field cannot be empty</string>
    <string name="toastPasswordsDontMatch">Passwords don\'t match</string>
    <string name="stepIndicator1">1</string>
    <string name="stepIndicator2">2</string>
    <string name="stepIndicator3">3</string>
    <string name="inputHintNumber">0</string>
    <string name="imageProduct">Product image</string>
    <string name="screenTitle">Entrepreneurial Venture</string>
    <string name="imageOverlay">Overlay</string>
    <string name="label_add_image">Add image</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_description">Product description</string>
    <string name="hint_product_price">Product price</string>
    <string name="text_delete_popup">Are you sure?</string>
    <string name="hint_quantity">Quantity</string>
    <string name="text_quantity_default">0</string>
    <string name="textDiscount">Discount</string>
    <string name="inputHintPercentage">0%</string>
    <string name="buttonAddProducts">Add products</string>

    <string name="label_quantity">Quantity:</string>
    <string name="text_add_image_choice">Add image</string>
    <string name="text_payment_method">Payment method</string>
    <string name="btn_gallery">GALLERY</string>
    <string name="btn_camera">CAMERA</string>
    <string name="btn_qr_code">QR CODE</string>
    <string name="btn_nfc">NFC</string>
    <string name="text_add_image_dialog">Choose how you want to add an image.</string>
    <string name="text_choose_payment_method">Choose payment method.</string>
    <string name="hint_package_discount">Package discount</string>
    <string name="btn_finish_adding_products">FINISH</string>
    <string name="hint_package_name">Package name</string>
    <string name="hint_package_description">Package description</string>
    <string name="imageReceipt">Invoice image</string>
    <string name="textInvoice">Invoice</string>
    <string name="addItemsText">List of items for sale is empty</string>
    <string name="sellItemsLink">Select items</string>
    <string name="textTotal">TOTAL:</string>
    <string name="textHRK">HRK</string>
    <string name="textItem">Item</string>
    <string name="textPrice">Price</string>
    <string name="textTotalPrice">Total</string>
    <string name="textLocation">Sale location:</string>
    <string name="textDate">Date:</string>
    <string name="textSeller">Seller:</string>
    <string name="textBuyer">Buyer:</string>
    <string name="textInvoiceDiscount">DISCOUNT:</string>
    <string name="valueInvoiceDiscount">0</string>
    <string name="Percentage">%</string>
    <string name="text_logo">FOI</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_buy">BUY</string>
    <string name="main_menu_invoices">INVOICES</string>
    <string name="main_menu_wallet">WALLET</string>
    <string name="main_menu_settings">SETTINGS</string>
    <string name="main_menu_sell">SELL</string>
    <string name="invoice_discount_amount">Discount Amount</string>
    <string name="invoice_price_before_discount">Price before discount</string>
    <string name="invoice_discount_percentage">Discount Percentage</string>
    <string name="wallet_details">Details</string>
    <string name="entrepreneurial_venture">Entrepreneurial Venture</string>
    <string name="wallet_balance">Balance</string>

</resources>
