<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationSecond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration2"
    android:focusable="true"
    tools:context=".fragments.RegistrationStep2Fragment">


    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/field_boxes_registration_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        app:hasClearButton="true"
        app:labelText="@string/inputHintUsername"
        app:layout_constraintBottom_toTopOf="@+id/field_boxes_registration_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:primaryColor="@color/colorFoiAlternate"
        app:secondaryColor="@color/colorFoi">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/input_registration_username"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/field_boxes_registration_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        app:hasClearButton="true"
        app:labelText="@string/inputHintEmail"
        app:layout_constraintBottom_toTopOf="@+id/field_boxes_registration_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_boxes_registration_username"
        app:primaryColor="@color/colorFoiAlternate"
        app:secondaryColor="@color/colorFoi">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/input_registration_email"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/field_boxes_registration_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        app:hasClearButton="true"
        app:labelText="@string/inputHintPassword"
        app:layout_constraintBottom_toTopOf="@+id/field_boxes_registration_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_boxes_registration_email"
        app:primaryColor="@color/colorFoiAlternate"
        app:secondaryColor="@color/colorFoi">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/input_registration_password"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/field_boxes_registration_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        app:hasClearButton="true"
        app:labelText="@string/inputHintConfirmPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_registration_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_boxes_registration_password"
        app:primaryColor="@color/colorFoiAlternate"
        app:secondaryColor="@color/colorFoi">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/input_registration_confirm_password"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


    <Button
        android:id="@+id/btn_registration_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/buttonCompleteRegistration"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_boxes_registration_confirm_password" />

    <ImageView
        android:id="@+id/stepIndicator1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="82dp"
        android:contentDescription="@string/stepIndicator1"
        android:src="@drawable/indicator_unselected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stepIndicator2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/stepIndicator2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/stepIndicator2"
        android:src="@drawable/indicator_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stepIndicator3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stepIndicator1" />

    <ImageView
        android:id="@+id/stepIndicator3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="82dp"
        android:contentDescription="@string/stepIndicator3"
        android:src="@drawable/indicator_unselected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stepIndicator2" />

</androidx.constraintlayout.widget.ConstraintLayout>
